--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Welcome to my site</h1>
-    <p>Just testing stuff out.</p>
-  </header>
+  <div class="container">
 
-  <main>
-    <section>
-      <h2>Random things</h2>
-      <ul>
-        <li><a href="#">Test link 1</a></li>
-        <li><a href="#">Test link 2</a></li>
-      </ul>
-    </section>
-  </main>
+    <header>
+      <h1>Welcome to my site</h1>
+      <p>Just testing stuff out.</p>
+    </header>
 
-  <footer>
-    <small>Made by xsh0u3</small>
-  </footer>
+    <main>
+      <section>
+        <h2>Random things</h2>
+        <ul>
+          <li><a href="#">Test link 1</a></li>
+          <li><a href="#">Test link 2</a></li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <small>Made by xsh0u3</small>
+    </footer>
+
+  </div>
 </body>
 </html>
